--- a/source/Rails/Rails/Base.lproj/Main.storyboard
+++ b/source/Rails/Rails/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0FR-zL-hvQ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,6 +23,121 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2447" y="733"/>
+        </scene>
+        <!--Authors Table View Controller-->
+        <scene sceneID="mqv-Kd-jr1">
+            <objects>
+                <tableViewController id="FBc-UM-TmK" customClass="AuthorsTableViewController" customModule="Rails" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" id="Tx6-cU-Tbv">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="65" id="ERp-dl-4Kb" customClass="AuthorTableViewCell" customModule="Rails" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="65"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" restorationIdentifier="tableCell" tableViewCell="ERp-dl-4Kb" id="biQ-8Q-wuy">
+                                    <frame key="frameInset" width="342" height="64.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jzo-dX-Pgd">
+                                            <frame key="frameInset" width="64" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="qHv-x6-TF2"/>
+                                                <constraint firstAttribute="width" constant="60" id="zDY-Wo-9ek"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Login name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kux-2Z-BGa">
+                                            <frame key="frameInset" minX="81" minY="8" width="260" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Number of commits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8lV-7Y-yoL">
+                                            <frame key="frameInset" minX="81" minY="37" width="260" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.49647049492385786" green="0.49647049492385786" blue="0.49647049492385786" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="Jzo-dX-Pgd" secondAttribute="bottom" constant="2" id="IvI-hi-7z1"/>
+                                        <constraint firstAttribute="trailing" secondItem="8lV-7Y-yoL" secondAttribute="trailing" constant="20" id="SXD-eV-ytO"/>
+                                        <constraint firstAttribute="bottom" secondItem="8lV-7Y-yoL" secondAttribute="bottom" constant="5" id="WEX-uP-sHs"/>
+                                        <constraint firstItem="kux-2Z-BGa" firstAttribute="leading" secondItem="Jzo-dX-Pgd" secondAttribute="trailing" constant="30" id="d3E-km-GcL"/>
+                                        <constraint firstItem="Jzo-dX-Pgd" firstAttribute="leading" secondItem="biQ-8Q-wuy" secondAttribute="leading" constant="15" id="ggO-sv-hSj"/>
+                                        <constraint firstItem="8lV-7Y-yoL" firstAttribute="leading" secondItem="Jzo-dX-Pgd" secondAttribute="trailing" constant="30" id="mgG-SF-9fv"/>
+                                        <constraint firstItem="kux-2Z-BGa" firstAttribute="top" secondItem="biQ-8Q-wuy" secondAttribute="topMargin" id="nGB-69-PnF"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="kux-2Z-BGa" secondAttribute="trailing" constant="20" id="rbs-fD-Au7"/>
+                                        <constraint firstItem="Jzo-dX-Pgd" firstAttribute="top" secondItem="biQ-8Q-wuy" secondAttribute="top" constant="2" id="ygb-WF-iYn"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorsImageView" destination="Jzo-dX-Pgd" id="Bzm-S3-Wne"/>
+                                    <outlet property="loginNameLabel" destination="kux-2Z-BGa" id="yFf-jB-zhx"/>
+                                    <outlet property="numberOfCommitsLabel" destination="8lV-7Y-yoL" id="7yS-tU-IoS"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="FBc-UM-TmK" id="ivX-i5-TYp"/>
+                            <outlet property="delegate" destination="FBc-UM-TmK" id="EFF-ot-7Ul"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="1PP-iy-Zgy"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FuV-r5-c2y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="849" y="733"/>
+        </scene>
+        <!--Commits Table View Controller-->
+        <scene sceneID="R0g-2z-Osr">
+            <objects>
+                <tableViewController id="kgy-Pb-jv4" customClass="CommitsTableViewController" customModule="Rails" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" sectionHeaderHeight="28" sectionFooterHeight="28" id="VWY-7x-NoP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="sPA-UF-vHl" customClass="CommitsTableViewCell" customModule="Rails" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="64"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sPA-UF-vHl" id="V2C-qR-g8T">
+                                    <frame key="frameInset" width="375" height="63"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="kgy-Pb-jv4" id="fWr-qS-iJ2"/>
+                            <outlet property="delegate" destination="kgy-Pb-jv4" id="9TV-Ej-8gj"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2LM-mf-rnE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1649" y="733"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hoV-Cc-tab">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0FR-zL-hvQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xAw-U1-0M9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FBc-UM-TmK" kind="relationship" relationship="rootViewController" id="fF4-Xz-EfK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AUV-1g-XzZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="733.5832083958021"/>
         </scene>
     </scenes>
 </document>
